# urllib3

./: .coveragerc  .deepsource.toml  .eslintrc.yml  .flake8  .gitignore  .hgignore  .hgtags  .pre-commit-config.yaml  .python-version  .readthedocs.yml  .travis.yml  CHANGES.rst  CODE_OF_CONDUCT.md  CONTRIBUTORS.txt  LICENSE.txt  MANIFEST.in  Makefile  Quantum live screen reader  README.md  README.rst  README.txt  RELEASE_CHECKLIST.md  Raging camo gazebo  Runtime oracle  appveyor.yml  cleancov.py  codecov.yml  demo.py  dev-requirements.in  dev-requirements.txt  emscripten-requirements.txt  ipv6_test.py  mypy-requirements.in  mypy-requirements.txt  notes.org  noxfile.py  osv-scanner.toml  pyproject.toml  python2_demo.py  release.sh  (+11 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  codeql.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: 01_bug_report.md  01_feature_request.md  02_bug_report.md  config.yml
.github/PULL_REQUEST_TEMPLATE/: PULL_REQUEST_TEMPLATE.md  RELEASE_TEMPLATE.md  release.md
.github/workflows/: changelog.yml  ci.yml  codeql.yml  downstream.yml  fuzz.yml  integration.yml  lint.yml  nowsecure-mobile-sbom.yml  publish.yml  scorecards.yml  sonarcloud.yml
_travis/: deploy.sh  fetch_gae_sdk.py  install.sh  run.sh  travis-install.sh  travis-run.sh  upload_coverage.sh
_travis/downstream/: botocore.sh  google-brotli.sh  requests-requirements.txt  requests.sh
changelog/: 1252.bugfix.rst  1338.feature.rst  1362.bugfix.rst  1445.feature.rst  1543.bugfix.rst  1780.bugfix.rst  1897.feature.rst  1897.removal.rst  1985.removal.rst  1992.feature.rst  1999.bugfix.rst  1999.feature.rst  2044.removal.rst  2080.feature.rst  2082.feature.rst  2083.feature.rst  2086.removal.rst  2099.feature.rst  2110.feature.rst  2113.removal.rst  2118.bugfix.rst  2120.feature.rst  2128.bugfix.rst  2128.removal.rst  2133.feature.rst  2150.feature.rst  2168.removal.rst  2197.feature.rst  2209.feature.rst  2213.bugfix.rst  2216.feature.rst  2233.removal.rst  2242.feature.rst  2243.feature.rst  2244.bugfix.rst  2254.feature.rst  2257.removal.rst  2267.removal.rst  2269.removal.rst  2271.removal.rst  (+237 more)
ci/: 0001-Mark-100-Continue-tests-as-failing.patch  0001-Mark-test_redirecting_to_bad_url-as-failing.patch  0001-requests-test-cert-key-usage.patch  0002-Requests-Hface.patch  0002-Stop-relying-on-removed-DEFAULT_CIPHERS.patch  0003-requests-removed-warnings.patch  0004-requests-chunked-requests.patch  0005-botocore-fakesocket-settimeout.patch  deploy.sh  install.sh  requests.patch  run.sh  run_tests.sh  skip-hanging-requests-test.patch  upload_coverage.sh
ci/downstream/: requests-requirements.txt  requests.sh
demo/: async-demo.py  sync-demo.py
docs/: Makefile  README  advanced-usage.rst  changelog.rst  collections.rst  conf.py  contrib.rst  contributing.rst  deprecation-policy.rst  doc-requirements.txt  exceptions.rst  fields.rst  helpers.rst  index.rst  make.bat  managers.rst  policy.rst  pools.rst  recipes.rst  requirements.txt  scratch.rst  security.rst  spelling_wordlist.txt  sponsors.rst  user-guide.rst  v2-migration-guide.rst  v2-roadmap.rst
docs/_static/: tweaks.css
docs/reference/: helpers.rst  index.rst  managers.rst  urllib3.backend.rst  urllib3.connection.rst  urllib3.connectionpool.rst  urllib3.contrib.rst  urllib3.fields.rst  urllib3.filepost.rst  urllib3.multipart.rst  urllib3.poolmanager.rst  urllib3.request.rst  urllib3.response.rst  urllib3.rst  urllib3.util.rst
dummyserver/: app.py  asgi_proxy.py  handlers.py  httpproxy.py  https_proxy.py  hypercornserver.py  proxy.py  server.py  socketserver.py  socks4proxy.py  socks5proxy.py  testcase.py  tornadoserver.py
dummyserver/certs/: README.rst  cacert.key  cacert.no_san.pem  cacert.pem  client.csr  client.key  client_bad.pem  client_intermediate.key  client_intermediate.pem  client_no_intermediate.key  client_no_intermediate.pem  client_password.key  intermediate.key  intermediate.pem  server.combined.pem  server.crt  server.ip_san.crt  server.ipv6_san.crt  server.ipv6addr.crt  server.ipv6addr.key  server.key  server.key.org  server.no_san.crt  server.no_san.csr  server.unsigned.crt  server.unsigned.csr  server_password.key  server_timed_out.crt
notes/: connection-lifecycle.md  public-and-private-apis.md
requirements/: brotlipy.in  brotlipy.txt  coverage.in  coverage.txt  docs.in  docs.txt  lint.in  lint.txt  nox.in  nox.txt  publish.in  publish.txt  test.in  test.txt
src/urllib3/: __init__.py  _base_connection.py  _collections.py  _compat.py  _request_methods.py  _typing.py  _version.py  backends.py  base.py  connection.py  connectionpool.py  exceptions.py  exceptions.pyi  fields.py  fields.pyi  filepost.py  filepost.pyi  http2.py  request.py  (+2 more)
templates/: pyodide-console.html
test/: __init__.py  benchmark.py  conftest.py  dummy_server.py  port_helpers.py  socketpair_helper.py  ssl_blocker.py  test__httplib.py  test_backends.py  test_collections.py  test_compatibility.py  test_connection.py  test_connectionpool.py  test_custom_connectionpool.py  test_dummyserver.py  test_exceptions.py  test_external.py  test_fields.py  test_filepost.py  test_header_name.py  test_hsts.py  test_http2_connection.py  test_hypercornserver.py  test_hypothesis_connection.py  test_hypothesis_fields.py  test_hypothesis_headers.py  test_hypothesis_request.py  test_hypothesis_response.py  test_hypothesis_retry.py  test_hypothesis_timeout.py  test_hypothesis_url.py  test_no_ssl.py  test_poolmanager.py  test_proxy.py  test_proxymanager.py  test_queue_monkeypatch.py  test_request.py  test_request_header_typing.py  test_requestmethods.py  test_response.py  (+20 more)
urllib3/: __init__.py  __main__.py  _collections.py  _httplib.py  backends.py  base.py  collections_.py  connection.py  connectionpool.py  contexthandlers.py  exceptions.py  fields.py  filepost.py  hsts.py  peer_certificate_verifiers.py  poolmanager.py  request.py  response.py  sessionmanager.py  sync_connection.py  transport_security.py  util.py
urllib3.egg-info/: PKG-INFO  SOURCES.txt
wasi-tools/: regenerate_bindings.sh
(+195 files in other folders)
