[flake8]
ignore = E501, E203, W503, W504
exclude=./docs/conf.py
max-line-length=99

[metadata]
license_file = LICENSE.txt
provides-extra =
    secure
    socks
    brotli
requires-dist =
    pyOpenSSL>=0.14; extra == 'secure'
    cryptography>=1.3.4; extra == 'secure'
    idna>=2.0.0; extra == 'secure'
    certifi; extra == 'secure'
    PySocks>=1.5.6,<2.0,!=1.5.7; extra == 'socks'
    brotli>=1.0.9; platform_python_implementation == 'CPython' and extra == 'brotli'
    brotlicffi>=0.8.0; platform_python_implementation != 'CPython' and extra == 'brotli'

[tool:pytest]
xfail_strict = true
python_classes = Test *TestCase

[isort]
profile=black
