[metadata]
name = urllib3
author = Andrey Petrov
author_email = andrey.petrov@shazow.net
license = MIT
description = HTTP library with thread-safe connection pooling, file post, and more.
keywords = urllib, httplib, threadsafe, filepost, http, https, ssl, pooling
url = https://urllib3.readthedocs.io/
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries
project_urls =
    Documentation = https://urllib3.readthedocs.io/
    Code = https://github.com/urllib3/urllib3
    Issue tracker = https://github.com/urllib3/urllib3/issues

[options]
package_dir=
    = src
packages =
    urllib3
    urllib3.contrib
    urllib3.contrib._securetransport
    urllib3.util
python_requires = >=3.6, <4
setup_requires = setuptools; wheel; toml; read_version >= 0.3

[options.extras_require]
brotli =
    brotli>=1.0.9; platform_python_implementation == 'CPython'
    brotlicffi>=0.8.0; platform_python_implementation != 'CPython'
secure =
    pyOpenSSL>=0.14
    cryptography>=1.3.4
    idna>=2.0.0
    certifi
socks = PySocks>=1.5.6,<2.0,!=1.5.7

[flake8]
ignore = E501, E203, W503, W504
exclude=./docs/conf.py
max-line-length=99

[tool:pytest]
xfail_strict = true
python_classes = Test *TestCase

[isort]
profile=black
