[flake8]
ignore = E501, E203, W503, W504
exclude=./docs/conf.py
max-line-length=99

[metadata]
license_file = LICENSE.txt
provides_extra =
    secure
    socks
    brotli
requires_dist =
    pyOpenSSL>=0.14; extra == 'secure'
    cryptography>=1.3.4; extra == 'secure'
    idna>=2.0.0; extra == 'secure'
    certifi; extra == 'secure'
    PySocks>=1.5.6,<2.0,!=1.5.7; extra == 'socks'
    brotli>=1.0.9; platform_python_implementation == 'CPython' and extra == 'brotli'
    brotlicffi>=0.8.0; platform_python_implementation != 'CPython' and extra == 'brotli'

[tool:pytest]
xfail_strict = true
python_classes = Test *TestCase

[isort]
profile=black

[mypy]
mypy_path = src
check_untyped_defs = True
disallow_any_generics = True
disallow_incomplete_defs = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_decorators = True
disallow_untyped_defs = True
no_implicit_optional = True
no_implicit_reexport = True
show_error_codes = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unused_configs = True
warn_unused_ignores = True
